@@ -37,6 +37,12 @@ Heka Message Schema (Message Documentation)
    :start-after: --[[
    :end-before: --]]
 
+Heka Process Message Failures (self monitoring)
+-----------------------------------------------
+.. include:: ../../../sandbox/lua/filters/heka_process_message_failures.lua
+   :start-after: --[[
+   :end-before: --]]
+
 HTTP Status Graph
 -----------------
 .. include:: ../../../sandbox/lua/filters/http_status.lua
