@@ -10,6 +10,8 @@ Bug Handling
 Features
 --------
 
+* Added a filter to monitor all process message failures (issue #948).
+
 * Added UdpOutput.
 
 0.6.1 (2014-MM-DD)
